--- a/index.html
+++ b/index.html
@@ -6,15 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my assignment one</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>
-        Achieve your goals
-    </h1>
-    <h1>
-        Make 2022 your year!
-    </h1>
+    <section>
+        <div class="half-width">
+            <h1>
+                Achieve your goals
+            </h1>
+            <h1>
+                <span class="os">make</span>2022<span class="os">your year</span>!
+            </h1>
+            <p>
+                Achieve your goals in 2022.Stay focused and learn and become a skilled web developer.It is not easy to
+                become an web developer,and
+                it's definitely hard to stay focused.But it is not harder then not knowing a skill and struggle in life.
+                So
+                make
+                your commitment towards your future and work very hard to reach your goals.
+            </p>
+
+        </div>
+        <div class="half-width">
+            <img src="image/p1.png" alt="">
+        </div>
+
+    </section>
 </body>
 
 </html>
