--- a/index.html
+++ b/index.html
@@ -29,12 +29,32 @@
                 make
                 your commitment towards your future and work very hard to reach your goals.
             </p>
-
+            <a target="blank" class="anchor-button" href="https://www.programming-hero.com/">Explore More</a>
+            <h5>scroll down to explore more</h5>
         </div>
         <div class="half-width">
             <img src="image/p1.png" alt="">
-        </div>
 
+        </div>
+    </section>
+    <div>
+
+        <h1 class="second-heading">Three goals for 2022</h1>
+
+    </div>
+    <section class="second-section">
+        <div class="lower-div">
+            <img src="image/p4.png" alt="">
+            <h3>Explore</h3>
+        </div>
+        <div class="lower-div">
+            <img src="image/p3.png" alt="">
+            <h3>Lrean</h3>
+        </div>
+        <div class="lower-div">
+            <img src="image/p2.png" alt="">
+            <h3>Apply</h3>
+        </div>
     </section>
 </body>
 
