--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-section">
         <div class="half-width">
             <h1>
                 Achieve your goals
@@ -46,14 +46,33 @@
         <div class="lower-div">
             <img src="image/p4.png" alt="">
             <h3>Explore</h3>
+            <p>Exploring is the first step one should take before starting anything new.Web developing is a huge
+                sector,so anyone wjo is interested should explore first about it.</p>
         </div>
         <div class="lower-div">
             <img src="image/p3.png" alt="">
             <h3>Lrean</h3>
+            <p>Learing is the key to do anything in life.Without learning we can not do anything,web developing is like
+                everything else.to learn web developing takes hard work.If anyone gives enough effort web developing can
+                be a way to their success. </p>
         </div>
         <div class="lower-div">
             <img src="image/p2.png" alt="">
             <h3>Apply</h3>
+            Learn web developing seriously.Learn all the basic and advamced skills of web development and apply your
+            work.Without applying your skills to test we can not know our strength.So after learning we must apply our
+            knowledge into work.
+        </div>
+    </section>
+    <section class="bottom-section">
+        <div class="half-width">
+            <img src="image/p9.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Build a career</h1>
+            <p>In this era when building a career is so tough web developingcan be a beacon of hope.With a little hard
+                work one can achieve wonders.Web developing has huge possibilities.</p>
+            <a target="blank" class="anchor-button" href="https://www.programming-hero.com/">Know More</a>
         </div>
     </section>
 </body>
