--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
             <a target="blank" class="anchor-button" href="https://www.programming-hero.com/">Know More</a>
         </div>
     </section>
+    <section class="last-section">
+        <div class="last-div">
+            <h1>Help & support</h1>
+            <p>To lraen web developing we need support and guidance.programing-hero is a platform where someone can find
+                help and right guidance.</p>
+            <a target="blank" class="anchor-button" href="https://www.programming-hero.com/">programing-hero</a>
+        </div>
+        <div class="last-div">
+            <img src="image/p10.png" alt="">
+        </div>
+    </section>
+    <footer>
+        <h1>mission <span class="f-span">2022</span></h1>
+        <h5>Be skilled & Be humble</h5>
+    </footer>
 </body>
 
 </html>
